--- a/environments/production/hieradata/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/puppet-node.localdomain.yaml
@@ -1,5 +1,5 @@
 #---puppet-node.localdomain
-apache::server_admin: 'test@example.com'
-apache::document_root: '/var/www/html'
-apache::server_name: 'example.com'
-apache::server_alias: 'www.example.com'
+apache::vhosts::server_admin: 'test@example.com'
+apache::vhosts::document_root: '/var/www/html'
+apache::vhosts::server_name: 'example.com'
+apache::vhosts::server_alias: 'www.example.com'
