--- a/environments/production/hieradata/common.yaml
+++ b/environments/production/hieradata/common.yaml
@@ -1,4 +1,6 @@
-apache::vhosts::server_admin: 'admin@example.com'
-apache::vhosts::document_root: '/var/www/html'
-apache::vhosts::server_name: 'example.com'
-apache::vhosts::server_alias: 'www.example.com'
+apache::vhosts:
+  example1.com:
+    servername: 'example1.com'
+    docroot: '/var/www/example1'
+    port: '80'
+    ssl: false
