--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -1,6 +1,8 @@
-apache::vhosts:
-  example2.com:
-    servername: 'example2.com'
-    docroot: '/var/www/example1'
-    port: '80'
-    ssl: false
+#apache::vhosts:
+ # example2.com:
+  #  servername: 'example2.com'
+   # docroot: '/var/www/example2'
+    #port: '80'
+   # ssl: false
+
+apache::vhost::servername: "example3.com"
