--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -1,6 +1,10 @@
+---
+classes:
+  - apache:vhost
+ 
 apache::vhosts:
   servername: 'example2.com'
   docroot: '/var/www/example2'
   port: '80'
   ssl: false
-    
+  
