--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -1,9 +1,14 @@
 ---
 classes:
   - apache:vhost
- 
-apache::vhost::servername: 'example2.com'
-apache::vhost::docroot: '/var/www/example2'
+
+apache::vhost:servername:
+  - example2
+  - example1
+apache::vhost::docroot:
+  - '/var/www/example2'
+  - '/var/www/example1'
 apache::vhost::port: '80'
-apache::vhost::ssl: false
-  
+apache::vhost::ssl:
+  - false 
+  - false 
