--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -2,9 +2,12 @@
 classes:
   - apache:vhost
 
-apache::vhost:
-  'test.com':
-    servername: ['test.com']
-    docroot: ['/var/www/test']
+apache::vhosts:
+  - servername: 'example.com'
+    docroot: '/var/www/example'
+    port: '80'
+    ssl: false
+  - servername: 'sub.example.com'
+    docroot: '/var/www/sub'
     port: '80'
     ssl: false
