--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -1,13 +1,14 @@
 ---
-classes:
-  - apache
-
 apache::vhosts:
-  - servername: 'example.com'
-    docroot: '/var/www/example'
-    port: '80'
-    ssl: false
-  - servername: 'sub.example.com'
-    docroot: '/var/www/sub'
-    port: '80'
-    ssl: false
+  vhosts:
+    example_com:
+      servername: 'example.com'
+      docroot: '/var/www/example'
+      port: '80'
+      ssl: false
+    sub_example_com:
+      servername: 'sub.example.com'
+      docroot: '/var/www/sub'
+      port: '80'
+      ssl: false
+
