--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -1,10 +1,12 @@
 ---
 apache::vhosts:
-  - servername: 'example.com'
+  example_com:
+    servername: 'example.com'
     docroot: '/var/www/example'
     port: '80'
     ssl: false
-  - servername: 'sub.example.com'
+  sub_example_com:
+    servername: 'sub.example.com'
     docroot: '/var/www/sub'
     port: '80'
     ssl: false
