--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -6,7 +6,7 @@ apache::vhosts:
       docroot: '/var/www/example'
       ssl: false
     sub_example_com:
-      servername: 'sub.example.com'
+      servername: 'test.example.com'
       docroot: '/var/www/sub'
       ssl: false
 
