--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -4,7 +4,7 @@ apache::vhosts:
     example_com:
       servername: 'example.com'
       docroot: '/var/www/example'
-      ssl: false
+      ssl: true
     sub_example_com:
       servername: 'test.example.com'
       docroot: '/var/www/sub'
