--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -2,9 +2,11 @@
 apache::vhosts:
   vhosts:
     example_com:
+      servername: 'example.com'
       docroot: '/var/www/example'
       ssl: false
     sub_example_com:
+      servername: 'test.example.com'
       docroot: '/var/www/sub'
       ssl: false
 
