adding redirect and backend

--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -4,9 +4,10 @@ apache::vhosts:
     example_com:
       servername: 'example.com'
       docroot: '/var/www/example'
-      ssl: true
+      ssl: false
     sub_example_com:
       servername: 'test.example.com'
       docroot: '/var/www/sub'
       ssl: false
-
+      redirect: true 
+      backend: '3dbambuu.ch'
