--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -5,6 +5,7 @@ apache::vhosts:
       servername: 'example.com'
       docroot: '/var/www/example'
       ssl: false
+      redirect: true 
     sub_example_com:
       servername: 'test.example.com'
       docroot: '/var/www/sub'
