--- a/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
+++ b/environments/production/hieradata/nodes/puppet-node.localdomain.yaml
@@ -6,6 +6,7 @@ apache::vhosts:
       docroot: '/var/www/example'
       ssl: false
       redirect: true 
+      backend: '3dbambuu.ch'
     sub_example_com:
       servername: 'test.example.com'
       docroot: '/var/www/sub'
